# cpp_gossip

./: .gitignore  CMakeLists.txt  README.md  gossip.h  gossip.hpp
examples/: blocking_udp_echo_client.cpp  main.cpp  timer.cpp
src/: broadcast.hpp  config.h  config.hpp  gossiper.cpp  gossiper.h  gossiper.hpp  handler.hpp  hybrid_runner.hpp  logger.hpp  node.hpp  suspicion.hpp  ticker.hpp  types.hpp  utils.hpp
src/message/: header.hpp  message.fbs  message.pb.cc  message.pb.h  message.proto  message_generated.h
src/network/tcp/: async_client.hpp  blocking_client.hpp  runner.hpp  server.h  server.hpp
src/network/udp/: async_client.hpp  broadcast.hpp  runner.hpp
